--- a/haval-h6-mqtt/translations/en.yaml
+++ b/haval-h6-mqtt/translations/en.yaml
@@ -2,15 +2,15 @@ configuration:
   refresh_time:
     name: "Refresh Interval (seconds)"
     description: "Time interval for querying the API and updating data for entities created by this integration. It cannot be lower than 5 seconds."
-  haval_username:
+  gwm_username:
     name: "'My GWM' App Username"
     description: "The email address used during registration."
-  haval_password:
+  gwm_password:
     name: "'My GWM' App Password"
-  haval_vin:
+  gwm_vin:
     name: "Default Vehicle Chassis"
     description: "Check in the app or on the invoice."
-  haval_pin:
+  gwm_pin:
     name: "'My GWM' app PIN for commands"
     description: "PIN code used in the 'My GWM' app to activate the command request like turning the air conditioner on."
   mqtt_server:
